# cornern-backend

./: .dockerignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  docker-compose.yml  post-create.sh  post-start.sh
cornern/: manage.py
cornern/api/: admin.py  apps.py  models.py  schema.py  service.py  urls.py  views.py
cornern/api/migrations/: 0001_initial.py  0002_alter_corner_description.py  0003_alter_corner_options_alter_feedback_options_and_more.py  0004_alter_measurement_created_at.py  0005_alter_corner_lat_alter_corner_lon.py  0006_alter_measurement_created_at.py  0007_alter_measurement_created_at.py
cornern/cornern/: asgi.py  settings.py  urls.py  wsgi.py
deployment/: Dockerfile  start.sh
scripts/: data.py
